--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <img src="your-image.jpg" alt="Your Image Description" style="max-width: 100%; height: auto;">
     </div>
 
-    <p><h1>Worth A Thousand Words</h1>
+    <p><h1>Worth A Thousand Words</h1></p>
     
     <h6>Boat.</h6>
 
@@ -80,10 +80,10 @@
     <h1>HTML</h1>
     <br>
     <br>
-    What HTML tags would you like to see? Let’s start with an unordered list: 
+    <p>What HTML tags would you like to see? Let’s start with an unordered list: 
     One Two Three Four And then move on to a more interesting ordered list: 
     one, two buckle my shoe three, four knock at the door Five, six pick up 
-    sticks Seven, eight, lay them straight Nine, ten, a big fat hen… 
+    sticks Seven, eight, lay them straight Nine, ten, a big fat hen… </p>
     <br>
     <br>
     <br>
@@ -124,11 +124,11 @@
     <br>
     <br>
     <br>
-    This post has 4 categories, part of a hierarchy that is 3 deep. Lorem ipsum 
+    <p>This post has 4 categories, part of a hierarchy that is 3 deep. Lorem ipsum 
     dolor sit amet, consectetuer adipiscing elit. Fusce euismod commodo ante. 
     Suspendisse potenti. Nunc pellentesque quam vel pede. Ut a lorem non 
     urna molestie euismod. Fusce consequat tortor eu urna. Pellentesque 
-    aliquam, pede eget tincidunt feugiat, nunc massa hendrerit magna, non… 
+    aliquam, pede eget tincidunt feugiat, nunc massa hendrerit magna, non… </p>
     <br>
     <br>
     <br>
@@ -166,7 +166,7 @@
 
 
 
-</p>
+
 </body>
 </html>
 
