made the suggested changes

--- a/pages/page3.html
+++ b/pages/page3.html
@@ -7,23 +7,10 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-               <table>
-                <thead>
-
-                    <tr><li><a href="URL_of_the_future_page"style="color: black">Twenty Twenty-Two</a></tr><tr><h3>about</h3>&nbsp;&nbsp;&nbsp;<a href="URL_of_the_future_page" style="color: black">Parent Page</a> </tr></li>
-                <h1>More Tags</h1>
-                <br>
-                <br>
-                <br>
-                <hr>
-                <br>
-                <br>
-                <br>
-                </thead>
-               </table>
-            </ul>
+        <nav style="display: flex; justify-content: space-around; background-color: #f8f9fa; padding: 10px;">
+            <a href="#twentytwentytwo" style="text-decoration: none; color: #333; font-size: 16px; padding: 5px 10px;">Twenty Twenty-Two</a>
+            <a href="#about" style="text-decoration: none; color: #333; font-size: 16px; padding: 5px 10px;">About</a>
+            <a href="#parentpage" style="text-decoration: none; color: #333; font-size: 16px; padding: 5px 10px;">Parent Page</a>
         </nav>
     </header>
 
@@ -45,7 +32,7 @@
 <br>
 <br>
 <footer>
-    <p>&copy; <em>September 5, 2008</em>&nbsp;&nbsp;&nbsp;Theme Admin&nbsp;&nbsp;&nbsp;<a href="URL_of_the_future_page" style="color: black">Uncategorized</a></em></p>
+    <p>&copy; <em>September 5, 2008</em>&nbsp;&nbsp;&nbsp;Theme Admin&nbsp;&nbsp;&nbsp;<a href="URL_of_the_future_page" style="color: black">Uncategorized</a></p>
     <br>
     <br>
     <br>
