made suggested changes

--- a/pages/page1.html
+++ b/pages/page1.html
@@ -11,10 +11,10 @@
             <table>
               <thead>
                 <tr>
-                  <th><a href="URL_of_the_future_page" style="color: black"
+                  <th><a href="index.html" style="color: black"
                     >Twenty Twenty-Two</a></th>
                     
-                  <th> <a href="URL_of_the_future_page" style="color: black"
+                  <th> <a href="./index.html" style="color: black"
                     >Parent Page</a></th>
                 </tr>
               </thead>
@@ -37,10 +37,10 @@
 <br>
 <div>
     <em>October 17, 2008</em>Theme Admin
-    <a href="URL_of_the_future_page" style="color: black">Uncategorized </a>
-    <a href="URL_of_the_future_page" style="color: black">boat</a>
+    <a href="index.html" style="color: black">Uncategorized </a>
+    <a href="index.html" style="color: black">boat</a>
     ,
-    <a href="URL_of_the_future_page" style="color: black">lake </a>
+    <a href="index.html" style="color: black">lake </a>
   </div>
 <br>
 <br>
