--- a/pages/page2.html
+++ b/pages/page2.html
@@ -8,9 +8,9 @@
 <body>
     <header>
         <nav style="display: flex; justify-content: space-around; background-color: #f8f9fa; padding: 10px;">
-            <a href="#twentytwentytwo" style="text-decoration: none; color: #333; font-size: 16px; padding: 5px 10px;">Twenty Twenty-Two</a>
-            <a href="#about" style="text-decoration: none; color: #333; font-size: 16px; padding: 5px 10px;">About</a>
-            <a href="#parentpage" style="text-decoration: none; color: #333; font-size: 16px; padding: 5px 10px;">Parent Page</a>
+            <a href="index.html" style="text-decoration: none; color: #333; font-size: 16px; padding: 5px 10px;">Twenty Twenty-Two</a>
+            <a href="index.html" style="text-decoration: none; color: #333; font-size: 16px; padding: 5px 10px;">About</a>
+            <a href="index.html" style="text-decoration: none; color: #333; font-size: 16px; padding: 5px 10px;">Parent Page</a>
         </nav>
     </header>
 
