--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <h6>Boat.</h6>
 
-    <a href="URL_of_the_future_page"style="color: black">October 17, 2008</a>
+    <a href="./page1.html"style="color: black">October 17, 2008</a>
 
     <br>
     <br>
@@ -51,7 +51,7 @@
     <br>
     <br>
     <br>
-    <a href="page2.html" style="color: black">September 5, 2008</a>
+    <a href="./page2.html" style="color: black">September 5, 2008</a>
     <br>
     <br>
     <br>
@@ -72,7 +72,7 @@
     <br>
     <br>
     <br>
-    <a href="URL_of_the_future_page"style="color: black">June 21, 2008</a>
+    <a href="./page3.html"style="color: black">June 21, 2008</a>
 
     <br>
     <br>
@@ -95,7 +95,8 @@
     <br>
     <br>
     <br>
-    <a href="URL_of_the_future_page"style="color: black">June 21, 2008</a>
+    <a href="#" style="color: black">June 21, 2008</a>
+
 
     <br>
     <br>
@@ -116,7 +117,7 @@
     <br>
     <br>
     <br>
-    <a href="URL_of_the_future_page"style="color: black">June 20, 2008</a>
+    <a href="#"style="color: black">June 20, 2008</a>
 
     <br>
     <br>
@@ -140,7 +141,7 @@
     <br>
     <br>
     <br>
-    <a href="URL_of_the_future_page"style="color: black">June 20, 2008</a>
+    <a href="#"style="color: black">June 20, 2008</a>
 
     <br>
     <br>
@@ -158,7 +159,7 @@
     <br>
     <br>
     <br>
-    <a href="URL_of_the_future_page"style="color: black">June 4, 2008</a>
+    <a href="#"style="color: black">June 4, 2008</a>
 
     <br>
     <br>
@@ -170,7 +171,7 @@
     <br>
     <br>
     <br>
-    <a href="URL_of_the_future_page" style="color: black">Twenty Twenty-Two</a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Proudly powered by <a href="URL_of_the_future_page">WordPress</a>
+    <a href="#" style="color: black">Twenty Twenty-Two</a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Proudly powered by <a href="URL_of_the_future_page">WordPress</a>
 
 
 
